2001-05-29  Jeffrey Stedfast  <fejj@ximian.com>

	* internet-address.c (decode_mailbox): Oops, test to make sure we
	won't be running past the end of the buffer when considering a
	retry. Thanks to Charles Kerr for this fix.

2001-03-29  Charles Kerr <charles@rebelbase.com>

	* gmime-part.c (g_mime_part_append_pre_encoded_content): fix small
	bug that crept into the last commit.

2001-05-29  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes on behalf of Charles Kerr of Pan fame:
	
	* gmime-parser.c (g_mime_parser_construct_part_from_file):
	Use g_mime_part_append_pre_encoded_content().

	* gmime-part.c (g_mime_part_append_pre_encoded_content): New
	function so that the FILE parser doesn't need to manage it's own
	content array.

	* gmime-header.[c,h]: const'ify.
	(g_mime_header_foreach): New function to call a chosen function
	for each header in the header object.

2001-05-26  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Updated version to 0.6.0.

	* README: Updated version to 0.6.0.

	* doc/*: Updated again.

	* gmime-header.c (g_mime_header_to_string): New function - mostly
	for the sake of keeping with the API of the rest of GMime.
	(g_mime_header_set): Make sure to always encode the header value
	before we set it.

	* gmime-part.c (g_mime_part_write_to_string): New function to
	write the mime part to a GString.
	(g_mime_part_to_string): Use g_mime_part_write_to_string.

	* gmime-message.c (g_mime_message_get_headers): Use the new
	g_mime_header_to_string function.
	(g_mime_message_write_to_string): New function to write the
	message to a GString.
	(g_mime_message_to_string): Use write_to_string.

2001-05-25  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/*: Updated.

	* Makefile.am: Add gmime-header.[c,h] to the build.

	* gmime-parser.c: Numerous changes to use gmime-header.

	* gmime-message.c: Numerous changes to use gmime-header.
	(g_mime_message_add_arbitrary_header): Removed.
	(g_mime_message_set_header): The replacement for
	add_arbitrary_header.