@@ -1,3 +1,9 @@
+2001-03-31  Charles Kerr <charles@rebelbase.com>
+
+	* gmime-utils.c (g_mime_utils_8bit_header_decode): big speedups.
+
+	* gmime-utils.c (g_mime_utils_8bit_header_encode): small speedups.
+
 2001-05-29  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* internet-address.c (decode_mailbox): Oops, test to make sure we
